# pico-weather-display

./: CMakeLists.txt  README.md
include/: lcd1602_driver.h  lwipopts.h  message.h  portal.h  savecred.h  wifi.h
src/: lcd1602_driver.c  main.c  message.c  portal.c  savecred.c  wifi.c
